First pass at adding storage with whisper database

--- a/deb/roost.conf
+++ b/deb/roost.conf
@@ -1,2 +1,5 @@
 # The path to your XBee radio device
 xbee_device=/dev/ttyUSB0
+
+# path to the whisper databases used to store data
+data_dir=/var/roost/data
